forms-flow-idm/dhcho/dev/deployment_dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sofmun-keycloak
  namespace : forms-flow-idm
  labels:
    app.kubernetes.io/name: sofmunkeycloak
spec:
  replicas: 1
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: sofmunkeycloak
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sofmunkeycloak
    spec:
      imagePullSecrets:
        - name: private-registry
      containers:
        - name: sofmunkeycloak
          image: sofiamunicipalitydigitall/forms-flow-idm:latest
#          command: ["/opt/jboss/keycloak/bin/standalone.sh"]
#          args: ["-b 0.0.0.0 -Dkeycloak.import=/opt/jboss/keycloak/imports/formsflow-ai-realm.json -Dkeycloak.migration.strategy=OVERWRITE_EXISTING"]
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          volumeMounts:
            - name: firebase
              mountPath: /opt/keycloak/firebase
      volumes:
        - name: firebase
          nfs:
            server: 172.23.230.140
            path: /pvc/keycloak/firebase
