forms-flow-idm/dhcho/dev/ingress_dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forms-flow-idm-nginx
  namespace: forms-flow-idm
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "7200"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "7200"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "7200"
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: "identity-dev-eservices.egov.bg"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: forms-flow-idm-svc
            port:
              number: 80
